2010-06-29 Omair Majid <omajid@redhat.com>

	* netx/net/sourceforge/jnlp/cache/CacheUtil.java
	(urlToPath): Call FileUtils.sanitizePath.
	(fixPath): Moved to...
	* netx/net/sourceforge/jnlp/util/FileUtils.java
	(sanitizePath): New function. Moved from CacheUtil.java
	(sanitizeFileName): Use a blacklisting approach rather than a whitelisting
	approach: should work better with non ascii filenames.

2010-06-25 Andrew John Hughes  <ahughes@redhat.com>

	Remove VisualVM support, now maintained at
	http://icedtea.classpath.org/hg/visualvm
	* Makefile.am:
	Remove VisualVM targets, references and aliases.
	(NETBEANS_PROFILER_URL): Removed.
	(NETBEANS_PROFILER_SRC_ZIP): Likewise.
	(NETBEANS_PROFILER_MD5SUM): Likewise.
	(VISUALVM_URL): Likewise.
	(VISUALVM_SRC_ZIP): Likewise.
	(VISUALVM_MD5SUM): Likewise.
	(EXTRA_DIST): Remove visualvm.desktop.
	(distclean-local): Remove visualvm and netbeans deletion.
	(.PHONY): Remove clean-visualvm and clean-nbplatform targets.
	(download): Don't download VisualVM.
	(clean-download): Don't remove the VisualVM and NetBeans zips.
	(extract): Don't extract VisualVM and NetBeans.
	(icedtea): Don't depend on visualvm.stamp and remove post-install
	measures.
	(icedtea-debug): Likewise.
	(nbplatform): Removed.
	(visualvm): Removed.
	* acinclude.m4:
	Remove VisualVM-related macros.
	(FIND_NETBEANS): Removed.
	* configure.ac:
	Remove --with-netbeans-home and
	--enable-visualvm options.  Don't invoke
	VisualVM macros.
	* visualvm.desktop: Removed.

2010-06-25 Matthias Klose  <doko@ubuntu.com>

	Fix shark build failures, update for latest HotSpot taken from
	http://icedtea.classpath.org/hg/shark/hotspot/rev/3236ce90f188
	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp: Update.
	* ports/hotspot/src/share/vm/shark/sharkBuilder.hpp: Update.
	* ports/hotspot/src/share/vm/shark/sharkConstant.cpp: Update.

2010-06-24 Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Add new patch and update:
	(CACAO_VERSION): Bump to changeset which